--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,14 +16,13 @@
 }
 
 .chat-history,
-.chat-input,
-.chat-input .message-text {
+.chat-input {
   border: 1px solid rgba(228, 181, 181, 0.9);
 }
 
 .chat-history {
   min-height: 10rem;
-  max-height: 20rem;
+  max-height: 4rem;
   overflow-y: auto;
   overflow-x: visible;
   overflow-wrap: break-word;
@@ -40,8 +39,7 @@
   font-size: 0.8rem;
   margin: 0;
   padding: 0.1rem 0.4rem 0.2rem;
-
-  /* color: rgba(255, 255, 255, 0); */
+  background-color: seashell;
   display: flex;
   align-items: center;
 }
@@ -60,25 +58,25 @@ textarea,
 textarea:hover,
 textarea:focus,
 textarea:active {
-  border: none;
   outline: none;
   box-shadow: none; /* for sake FF */
 }
 
-.chat-input .nickname {
+.nickname {
   border: none;
   min-height: 1.4rem;
   font-size: 1rem;
   padding: 0.2rem 0.4rem;
 }
 
-.chat-input .message-text {
+.message-text {
   font-size: 1.2rem;
+  border: 1px solid rgba(228, 181, 181, 0.9);
   border-width: 1px 0;
   padding: 0.2rem 0.4rem;
 }
 
-.chat-input .send-button {
+.send-button {
   font-size: 1rem;
   background: #f1abab;
   border: 1px solid rgb(250, 250, 250);
@@ -86,7 +84,7 @@ textarea:active {
   text-shadow: 0 0 4px #fb2c2c;
 }
 
-.chat-input .send-button:active {
+.send-button:active {
   background: #f19090;
   border: 1px solid #f19090;
 }
@@ -95,10 +93,10 @@ textarea:active {
   padding: 0.1rem 0.4rem;
 }
 
-.chat-message .author {
+.author {
   color: #f19090;
 }
 
-.chat-message .my-nick {
+.myself {
   color: #bfbfbf;
 }
