--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -54,6 +54,16 @@
   outline: none;
 }
 
+.fading-text-transparent {
+  color: rgba(0, 0, 0, 0);
+  transition: color 0.5s ease;
+}
+
+.fading-text-opaque {
+  color: rgba(0, 0, 0, 1);
+  transition: color 0.5s ease;
+}
+
 textarea,
 textarea:hover,
 textarea:focus,
