--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -54,14 +54,16 @@
   outline: none;
 }
 
-.fading-text-transparent {
-  color: rgba(0, 0, 0, 0);
+.fading-text {
   transition: color 0.5s ease;
 }
 
-.fading-text-opaque {
+.transparent-text {
+  color: rgba(0, 0, 0, 0);
+}
+
+.opaque-text {
   color: rgba(0, 0, 0, 1);
-  transition: color 0.5s ease;
 }
 
 textarea,
