--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,11 +29,6 @@
   font-size: 0.9rem;
 }
 
-/* .typing-notif-hidden {
-  color: rgba(255, 255, 255, 1);
-  transition: color 1s ease;
-} */
-
 .typing-notif {
   min-height: 1.4rem;
   font-size: 0.8rem;
@@ -71,7 +66,7 @@ textarea:hover,
 textarea:focus,
 textarea:active {
   outline: none;
-  box-shadow: none; /* for sake FF */
+  box-shadow: none; /* for sake FF behavior */
 }
 
 .nickname {
