Start refactoring of styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,9 +6,9 @@
 }
 
 .chat-app {
-  width: 30%;
   min-width: 400px;
-  font-family: Verdana, sans-serif;
+  width: 30%;
+  font-family: Helvetica, Verdana, sans-serif;
 }
 
 .chat-app h3 {
