--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,8 +15,7 @@
   text-align: center;
 }
 
-.chat-history,
-.chat-input {
+.chat-history {
   border: 1px solid rgba(228, 181, 181, 0.9);
 }
 
@@ -42,7 +41,8 @@
 .chat-input {
   /* border-top: none; */
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .chat-input *:focus {
@@ -70,16 +70,61 @@ textarea:active {
 }
 
 .nickname {
-  border: none;
-  min-height: 1.4rem;
-  font-size: 1rem;
-  padding: 0.2rem 0.4rem;
+  padding: 1rem 0;
+  margin-bottom: 0.2rem;
 }
 
-.message-text {
+.nickname-field {
+  border: none;
+  // border-bottom: 1px solid rgba(0, 0, 0, 0.26);
+  // border-bottom: 1px solid rgb(224, 224, 224);
+  // border-bottom: 1px solid #9e9e9e;
+  box-sizing: border-box;
+  color: rgba(0, 0, 0, 0.87);
+  min-height: 1.4rem;
+  width: 100%;
+  font-size: 1rem;
+  // padding: 0 0.4rem;
+  // margin: 0 0 0.5rem;
+  // transition: all 0.5s;
+}
+
+.nickname-field:focus {
+  // border-bottom: 2px solid #f19090;
+}
+
+.underliner {
+  border: none;
+}
+
+.underline {
+  border: none;
+  border-bottom: 1px solid rgb(224, 224, 224);
+  margin: 0;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+
+.underline.off {
+  position: relative;
+  bottom: 2px;
+  padding-bottom: 1px;
+  transform: scaleX(0);
+}
+
+.underline.on {
+  // border-bottom: 1px solid #f19090;
+  // box-shadow: 0 1px 0 0 #f19090;
+  border-bottom: 2px solid #f19090;
+  position: relative;
+  bottom: 2px;
+  padding-bottom: 0;
+  transform: scaleX(1);
+}
+
+.message-field {
   font-size: 1.2rem;
-  border: 1px solid rgba(228, 181, 181, 0.9);
-  border-width: 1px 0;
+  border: none;
+  // border: 1px solid rgba(228, 181, 181, 0.9);
   padding: 0.2rem 0.4rem;
 }
 
