--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -126,6 +126,9 @@ textarea:active {
   border: none;
   // border: 1px solid rgba(228, 181, 181, 0.9);
   padding: 0.2rem 0.4rem;
+  width: 100%;
+  resize: vertical;
+  // min-height: 3rem;
 }
 
 .send-button {
