--- a/src/styles/partials/_typing-notification.scss
+++ b/src/styles/partials/_typing-notification.scss
@@ -9,7 +9,7 @@
 }
 
 .blinking-text {
-  transition: color 1s ease-out;
+  transition: color 0.5s ease-in-out;
 
   /* .transparent {
     color: rgba(0, 0, 0, 0);
