--- a/src/styles/components/_chat-form.scss
+++ b/src/styles/components/_chat-form.scss
@@ -1,29 +1,3 @@
-// TODO: replace to text-field's partials
-.nickname {
-  // padding: 0.5rem 0;
-  margin: 0.5rem 0;
-  position: relative;
-}
-
-.nickname-field {
-  border: none;
-  // border-bottom: 1px solid rgba(0, 0, 0, 0.26);
-  // border-bottom: 1px solid rgb(224, 224, 224);
-  // border-bottom: 1px solid #9e9e9e;
-  box-sizing: border-box;
-  color: rgba(0, 0, 0, 0.87);
-  min-height: 1.4rem;
-  width: 100%;
-  font-size: 1rem;
-  // padding: 0 0.4rem;
-  // margin: 0 0 0.5rem;
-  // transition: all 0.5s;
-}
-
-.nickname-field:focus {
-  // border-bottom: 2px solid #f19090;
-}
-
 textarea,
 textarea:hover,
 textarea:focus,
@@ -33,7 +7,7 @@ textarea:active {
   box-shadow: none; /* for sake FF behavior */
 }
 
-.chat-input {
+.chat-form {
   /* border-top: none; */
   display: flex;
   flex-direction: column;
@@ -52,7 +26,7 @@ textarea:active {
 //     outline: none;
 // }
 
-.message-field {
+.chat-form__msg-textarea {
   border: none;
   // border: 1px solid rgba(228, 181, 181, 0.9);
   // padding: 0.2rem 0.4rem;
@@ -62,7 +36,7 @@ textarea:active {
   min-height: 3rem;
 }
 
-.send-button {
+.chat-form__send-button {
   font-size: 1rem;
   background: #f1abab;
   border: 1px solid rgb(250, 250, 250);
