--- a/src/styles/components/_chat-form.scss
+++ b/src/styles/components/_chat-form.scss
@@ -1,10 +1,15 @@
-textarea,
-textarea:hover,
-textarea:focus,
-textarea:active {
-  font: inherit;
+// textarea,
+// textarea:hover,
+// textarea:focus,
+// textarea:active {
+//   font: inherit;
+//   outline: none;
+//   box-shadow: none; /* to disable red shadows on reqired inputs in FF */
+// }
+
+textarea {
+  box-shadow: none; /* to disable red shadows on reqired inputs in FF */
   outline: none;
-  box-shadow: none; /* for sake FF behavior */
 }
 
 .chat-form {
@@ -13,11 +18,12 @@ textarea:active {
   flex-direction: column;
   justify-content: space-around;
 
-  *:focus {
-    outline: none;
-  }
+  // *:focus {
+  //   outline: none;
+  // }
 
   input {
+    outline: none;
     padding: 0.3rem 0;
   }
 }
@@ -30,18 +36,18 @@ textarea:active {
   border: none;
   // border: 1px solid rgba(228, 181, 181, 0.9);
   // padding: 0.2rem 0.4rem;
-  padding: 0rem;
-  width: 100%;
-  resize: vertical;
   min-height: 3rem;
+  padding: 0;
+  resize: vertical;
+  width: 100%;
 }
 
 .chat-form__send-button {
-  font-size: 1rem;
   background: #f1abab;
   border: 1px solid rgb(250, 250, 250);
   border-radius: 2px;
   color: #fcfcfc;
+  font-size: 1rem;
   text-shadow: 0 0 4px #fb2c2c;
 
   &:active {
