--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import "components/chat-form";
 @import "components/chat-history";
 @import "components/history-message";
+@import "components/nav-bar";
 @import "components/text-field-material";
 @import "components/text-field-materialui";
 @import "components/typing-notification";
