Start creating ChatsPage

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,8 @@
 @import "components/app-bar";
 @import "components/chat-form";
 @import "components/chat-history";
+@import "components/chats-page";
+@import "components/chats-list-item";
 @import "components/history-message";
 @import "components/nav-bar";
 @import "components/text-field-material";
