--- a/src/styles/components/_chats-page.scss
+++ b/src/styles/components/_chats-page.scss
@@ -1,10 +1,18 @@
 .chats-page {
   background-color: #eee;
-  margin-bottom: 0;
-  position: fixed;
-  height: calc(100% - 1px); // TEMP
-  width: 100%;
-  z-index: -1;
+  // margin-bottom: 0;
+  // overflow: auto;
+  // NOTE: 100% work with postioning and stretch to comprise a content
+  // TODO: look for alternative manner to set 100% height
+  // 100vh work with overflow: auto; but not reflect additional height growth
+  // and excess scrollbar appears
+  height: calc(100% - 1px); // calc only for reminder
+  min-height: 100vh;
+  // NOTE: excess if app-bar is relatively positioned
+  padding-top: 4.5rem; // TODO: must equal to app-bar height variable
+  // position: fixed;
+  // width: 100%;
+  // z-index: -1;
 }
 
 .chats-list {
@@ -20,4 +28,16 @@
   border: none;
   border-top: 1px solid #eaeaea;
   margin: 0 1rem;
+}
+
+.test-picture {
+  background: url('../assets/test-picture.jpg') center no-repeat;
+  height: 72.3rem;
+  width: 100%;
+}
+
+.chats-page__footer {
+  bottom: 0;
+  position: absolute;
+  width: 100%;
 }
