--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,10 +1,14 @@
 html {
+  // TODO: remove this from some nested rules
+  box-sizing: border-box;
   font-size: 62.5%;
 }
 
 body {
   font-family: Helvetica, Verdana, sans-serif;
   font-size: 1.6rem;
+  // min-height: 100vh;
+  // height: 100%; // at Yandex site
 }
 
 #app {
@@ -22,13 +26,13 @@ body {
   text-align: center;
 }
 
-// hamburger button
+// for hamburger button
 .icon-button {
   background: transparent center center no-repeat;
   background-size: 24px 24px;
   border: none;
   cursor: pointer;
   margin: 0 0.4rem;
-  pading: 0;
+  padding: 0;
   outline: none;
 }
