--- a/src/styles/components/_app-bar.scss
+++ b/src/styles/components/_app-bar.scss
@@ -4,20 +4,53 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
   display: flex;
   justify-content: space-between;
-  min-height: 4.5rem;
+  height: 4.5rem; // TODO: add min/max-height?
+  // min-width:       // TODO: ???
+  // position: relative; // with top: 0, left: 0; was fixed at example site
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+}
+
+.app-bar__toolbar {
+
+}
+
+.app-bar__toolbar_left {
+
+}
+
+.app-bar__hamburger {
+  background-image: url(); // flex: 2;
+}
+
+.app-bar__logo-wrapper {
+  align-items: center;
+  display: flex;
+  min-width: 22rem;
 
   h1 {
-    // align-self: center;
-    flex: 2;
     margin: 0;
   }
 }
 
-.app-bar__open-sidenav {
-  align-self: center;
-  flex: 2;
+.app-bar__logo-link {
+  // height: 3.5rem;
+  padding: 0 1rem;
 }
 
-.app-bar__toolbar {
-  flex: 2;
+.app-bar__logo {
+  animation: app-logo-spin infinite 10s linear;
+  height: 3.5rem; // TODO: calc from app-bar height ?
+  vertical-align: middle; // OR:
+  // float: left; // NOTE: saw this at webpack site, align img vertically in <a>
+}
+
+.app-bar__toolbar_right {
+  // flex: 2;
+}
+
+@keyframes app-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
