Clean and recreate as Chat App with Chats, Profile, Settings and Not Found routes

--- a/src/styles/components/_chats.scss
+++ b/src/styles/components/_chats.scss
@@ -1,4 +1,4 @@
-.chats-page {
+.chats {
   background-color: #eee;
   // margin-bottom: 0;
   // overflow: auto;
@@ -36,7 +36,7 @@
   width: 100%;
 }
 
-.chats-page__footer {
+.chats__footer {
   bottom: 0;
   position: absolute;
   width: 100%;
