--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,11 +7,14 @@
 @import "components/app-bar";
 @import "components/chat-form";
 @import "components/chat-history";
-@import "components/chats-page";
+@import "components/chats";
+@import "components/chats-list";
 @import "components/chats-list-item";
 @import "components/drawer";
 @import "components/history-message";
 @import "components/nav-bar";
+@import "components/profile";
+@import "components/settings";
 @import "components/text-field-material";
 @import "components/text-field-materialui";
 @import "components/typing-notification";
