Change styling of Chat component

--- a/src/styles/components/_chat-form.scss
+++ b/src/styles/components/_chat-form.scss
@@ -51,7 +51,7 @@
   border: 1px solid rgb(250, 250, 250);
   border-radius: 2px;
   color: #fcfcfc;
-  font-size: 1rem;
+  // font-size: 1rem;
   text-shadow: 0 0 4px #fb2c2c;
 
   &:active {
