--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 @import "base/base";
 @import "base/container";
 @import "components/app-bar";
+@import "components/chat";
 @import "components/chat-form";
 @import "components/chat-history";
 @import "components/chats";
@@ -13,6 +14,7 @@
 @import "components/drawer";
 @import "components/history-message";
 @import "components/nav-bar";
+@import "components/not-found";
 @import "components/profile";
 @import "components/settings";
 @import "components/text-field-material";
