--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -16,14 +16,23 @@ body {
   // justify-content: center;
 }
 
-.chat {
-  min-width: 400px;
-  // width: 30%;
+// content
+.page {
+  // overflow: auto;
+  // NOTE: excess if app-bar is relatively positioned
+  padding-top: 4.5rem; // TODO: top must equal to app-bar height variable
+  // position: fixed;
+  // width: 100%;
+  // z-index: -1;
 }
 
-// TODO: extract into chat header
-.chat__header {
-  text-align: center;
+.paper {
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow:
+    0 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0 4px 5px 0 rgba(0, 0, 0, 0.14),
+    0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 // for hamburger button
