--- a/src/styles/components/_text-field-material.scss
+++ b/src/styles/components/_text-field-material.scss
@@ -12,7 +12,7 @@
   // border-bottom: 1px solid #9e9e9e;
   box-sizing: border-box;
   color: rgba(0, 0, 0, 0.87);
-  font-size: 1.5rem;
+  // font-size: 1.5rem;
   // margin: 0 0 0.5rem;
   min-height: 1.4rem;
   // padding: 0 0.4rem;
@@ -52,5 +52,5 @@
 
 .nickname__hint-text {
   color: rgb(212, 55, 55);
-  font-size: 0.85rem;
+  font-size: 1.4rem;
 }
