--- a/src/styles/components/_chat.scss
+++ b/src/styles/components/_chat.scss
@@ -6,19 +6,11 @@
   min-width: 40rem;
 }
 
-.chat_section {
+.chat__section {
+  padding: 1rem;
 }
 
 .chat__header {
   text-align: center;
 }
 
-.chat_paper {
-  background-color: #fff;
-  border-radius: 3px;
-  box-shadow:
-    0 2px 4px -1px rgba(0, 0, 0, 0.2),
-    0 4px 5px 0 rgba(0, 0, 0, 0.14),
-    0 1px 10px 0 rgba(0, 0, 0, 0.12);
-  padding: 1rem;
-}
