--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@
 @import "components/chat-history";
 @import "components/chats";
 @import "components/chats-list";
-@import "components/chats-list-item";
+@import "components/chat-preview";
 @import "components/drawer";
 @import "components/history-message";
 @import "components/nav-bar";
