Extract thin containers, create components subdirectories

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,18 +5,18 @@
 @import "base/base";
 @import "base/container";
 @import "components/app-bar";
-@import "components/chat";
-@import "components/chat-form";
-@import "components/chat-history";
-@import "components/chats";
-@import "components/chats-list";
-@import "components/chat-preview";
+@import "components/chat/chat";
+@import "components/chat/chat-form";
+@import "components/chat/chat-history";
+@import "components/chat/history-message";
+@import "components/chat/typing-notification";
+@import "components/chats/chats";
+@import "components/chats/chats-list";
+@import "components/chats/chat-preview";
 @import "components/drawer";
-@import "components/history-message";
 @import "components/nav-bar";
 @import "components/not-found";
 @import "components/profile";
 @import "components/settings";
 @import "components/text-field-material";
 @import "components/text-field-materialui";
-@import "components/typing-notification";
