Add svg close button to chat list item

--- a/src/styles/components/_app-bar.scss
+++ b/src/styles/components/_app-bar.scss
@@ -1,7 +1,11 @@
 .app-bar {
   align-items: center;
   background-color: #e2e2e2;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26); // OR:
+  // box-shadow:
+  //   0 2px 4px -1px rgba(0, 0, 0, 0.2),
+  //   0 4px 5px 0 rgba(0, 0, 0, 0.14),
+  //   0 1px 10px 0 rgba(0, 0, 0, 0.12);
   display: flex;
   justify-content: space-between;
   height: 4.5rem; // TODO: add min/max-height?
