--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,9 +2,13 @@ html {
   // TODO: remove this from some nested rules
   // box-sizing: border-box;
   font-size: 62.5%;
+  // -webkit-font-smoothing: antialiased;
+  // -moz-osx-font-smoothing: grayscale;
 }
 
 body {
+  margin: 0;
+  background-color: #fafafa; // from Material UI
   font-family: Helvetica, Verdana, sans-serif;
   font-size: 1.6rem;
   // min-height: 100vh;
@@ -14,7 +18,8 @@ body {
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: border-box; // OR
+  // box-sizing: inherit; // if it was set for html
 }
 
 #app {
@@ -50,4 +55,10 @@ body {
   margin: 0 0.4rem;
   padding: 0;
   outline: none;
+}
+
+@media print {
+  body {
+    background-color: #fff;
+  }
 }
