--- a/src/styles/components/_app-bar.scss
+++ b/src/styles/components/_app-bar.scss
@@ -28,26 +28,34 @@
   background-image: url(); // flex: 2;
 }
 
-.app-bar__logo-wrapper {
+.app-bar__logo {
   align-items: center;
   display: flex;
   min-width: 22rem;
-
-  h1 {
-    margin: 0;
-  }
 }
 
-.app-bar__logo-link {
+.logo__link {
   // height: 3.5rem;
   padding: 0 1rem;
 }
 
-.app-bar__logo {
+.logo__img {
   animation: app-logo-spin infinite 10s linear;
   height: 3.5rem; // TODO: calc from app-bar height ?
   vertical-align: middle; // OR:
   // float: left; // NOTE: saw this at webpack site, align img vertically in <a>
+}
+
+.logo__text {
+  color: #ea8f8f;
+  // font-family: 'Monoton', cursive;
+  // font-family: 'Bungee Inline', cursive;
+  // font-family: 'Sirin Stencil', cursive;
+  // font-family: 'Carter One', cursive;
+  font-family: 'Bungee Shade', cursive;
+  font-size: 4rem;
+  margin: 0;
+  padding-bottom: 0.5rem;
 }
 
 .app-bar__toolbar_right {
