--- a/src/styles/components/chats/_chats.scss
+++ b/src/styles/components/chats/_chats.scss
@@ -1,5 +1,5 @@
 .chats {
-  background-color: #eee;
+  background-color: rgba(255, 248, 248, 0.5); // was #eee;
   // NOTE: 100% work with postioning and stretch to comprise a content
   // TODO: look for alternative manner to set 100% height
   // 100vh work with overflow: auto; but not reflect additional height growth
