Rewrite tryToSend thunk, remove unneeded actions/reducers, remove nickname field

--- a/src/styles/components/chat/_history-message.scss
+++ b/src/styles/components/chat/_history-message.scss
@@ -11,7 +11,7 @@
   background-color: #f8e8e879;
   color: #7c5f5f;
   margin-left: 10%;
-  margin-right: 0;
+  margin-right: 1rem;
 }
 
 .history-msg__nickname {
