--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,17 @@
 // this import must work or check postcss-import manner
 // @import '../node_modules/normalize.css/normalize.css';
 
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 // @import url('https://fonts.googleapis.com/css?family=Monoton&text=Local%20Chat%20LOCAL%20CHAT');
 // @import url('https://fonts.googleapis.com/css?family=Bungee+Inline&text=Local%20Chat%20LOCAL%20CHAT');
 // @import url('https://fonts.googleapis.com/css?family=Sirin+Stencil&text=Local%20Chat%20LOCAL%20CHAT');
 // @import url('https://fonts.googleapis.com/css?family=Carter+One&text=Local%20Chat%20LOCAL%20CHAT');
 @import url('https://fonts.googleapis.com/css?family=Bungee+Shade&text=Local%20Chat%20LOCAL%20CHAT');
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&subset=cyrillic-ext');
+// @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&subset=cyrillic-ext');
+
+// needed by "material-ui-next"
+// @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+// @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
 @import "base/settings";
 @import "base/base";
 @import "base/container";
