Create PublicWall component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,7 +13,7 @@
 // @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 @import "base/settings";
-@import "base/base";
+// @import "base/base";
 @import "base/container";
 @import "components/app-bar";
 @import "components/chat/chat";
