--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,19 +15,20 @@
 @import "base/settings";
 // @import "base/base";
 @import "base/container";
-@import "components/app-bar";
-@import "components/chat/chat";
-@import "components/chat/chat-form";
-@import "components/chat/chat-history";
-@import "components/chat/chat-history-msg";
-@import "components/chat/typing-notification";
-@import "components/chats/chats";
-@import "components/chats/chats-list";
-@import "components/chats/chat-preview";
-@import "components/drawer";
-@import "components/nav-bar";
+@import "components/app-logo";
+// @import "components/app-bar";
+// @import "components/chat/chat";
+// @import "components/chat/chat-form";
+// @import "components/chat/chat-history";
+// @import "components/chat/chat-history-msg";
+// @import "components/chat/typing-notification";
+// @import "components/chats/chats";
+// @import "components/chats/chats-list";
+// @import "components/chats/chat-preview";
+// @import "components/drawer";
+// @import "components/nav-bar";
 @import "components/not-found";
 @import "components/profile";
 @import "components/settings";
-@import "components/text-field-material";
-@import "components/text-field-materialui";
+// @import "components/text-field-material";
+// @import "components/text-field-materialui";
