Rewrite ChatPreview component, change styling

--- a/src/styles/base/container.scss
+++ b/src/styles/base/container.scss
@@ -1,6 +1,6 @@
 // or name this as content ?
-.container {
-  margin: 0 auto;
-  max-width: 50rem;
-  padding: 1rem;
-}
+// .container {
+//   margin: 0 auto;
+//   max-width: 50rem;
+//   padding: 1rem;
+// }
