--- a/src/styles/components/chats/_chats.scss
+++ b/src/styles/components/chats/_chats.scss
@@ -16,7 +16,7 @@
 }
 
 .test-picture {
-  background: url('../assets/test-picture.jpg') center no-repeat;
+  background: url('/assets/test-picture.jpg') center no-repeat;
   height: 72.3rem;
   width: 100%;
 }
